--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -17,7 +17,7 @@
     <form id="chatbot-input-row" autocomplete="off">
       <input id="chatbot-input" type="text" placeholder="Type your message..." required maxlength="256"
              data-en-ph="Type your message..." data-es-ph="Escriba su mensaje...">
-      <button id="chatbot-send" type="submit" disabled aria-label="Send">
+      <button id="chatbot-send" type="submit" aria-label="Send">
         <i class="fas fa-arrow-right"></i>
       </button>
       <button id="chatbot-close" type="button" class="modal-close" aria-label="Close">
