Wrap chatbot buttons in controls container

--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -17,12 +17,10 @@
     <form id="chatbot-input-row" autocomplete="off">
       <input id="chatbot-input" type="text" placeholder="Type your message..." required maxlength="256"
              data-en-ph="Type your message..." data-es-ph="Escriba su mensaje...">
-      <button id="chatbot-send" type="submit" aria-label="Send">
-        <i class="fas fa-arrow-right"></i>
-      </button>
-      <button id="chatbot-close" type="button" class="modal-close" aria-label="Close">
-        <i class="fas fa-times"></i>
-      </button>
+      <div id="chatbot-controls">
+        <button id="chatbot-send" type="submit" aria-label="Send"><i class="fas fa-arrow-right"></i></button>
+        <button id="chatbot-close" type="button" class="modal-close" aria-label="Close"><i class="fas fa-times"></i></button>
+      </div>
     </form>
    </div>
 </div>
