Expand Chattia input field

--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -15,8 +15,8 @@
 
   <div id="chatbot-form-container">
     <form id="chatbot-input-row" autocomplete="off">
-      <input id="chatbot-input" type="text" placeholder="Type your message..." required maxlength="256"
-             data-en-ph="Type your message..." data-es-ph="Escriba su mensaje...">
+      <textarea id="chatbot-input" rows="4" placeholder="Type your message..." required maxlength="256"
+                data-en-ph="Type your message..." data-es-ph="Escriba su mensaje..."></textarea>
       <div id="chatbot-controls">
         <button id="chatbot-send" type="submit" aria-label="Send"><i class="fas fa-arrow-right"></i></button>
         <button id="chatbot-close" type="button" class="modal-close" aria-label="Close"><i class="fas fa-times"></i></button>
@@ -24,3 +24,4 @@
     </form>
    </div>
 </div>
+
