--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -2,7 +2,7 @@
 <button id="chat-open-btn" aria-label="Open chat">
   <i class="fa-solid fa-comments"></i>
 </button>
-<div id="chatbot-container" role="dialog" aria-modal="true" aria-label="Chattia">
+<div id="chatbot-container" role="dialog" aria-modal="true" aria-label="Chattia" style="display:none" aria-hidden="true">
   <div id="chatbot-header">
     <span id="title" data-en="Chattia" data-es="Chattia">Chattia</span>
     <div>
