style: adjust chatbot minimize button

--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -1,6 +1,9 @@
 <!-- Chatbot fragment loaded dynamically -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chat_bubble" />
 <button id="chat-open-btn" aria-label="Open chat">
-  <i class="fa-solid fa-comments"></i>
+  <span class="material-symbols-outlined">
+    chat_bubble
+  </span>
 </button>
 <div id="chatbot-container" role="dialog" aria-modal="true" aria-label="Chattia" style="display:none" aria-hidden="true">
   <div id="chatbot-header">
