--- a/it-support.html
+++ b/it-support.html
@@ -38,10 +38,10 @@
     <header>
       <h1 data-key="header-heading">Keep Your Systems Secure and Stable</h1>
       <p data-key="header-subheading">Dependable help desk, cybersecurity, and cloud services to keep your IT infrastructure running smoothly.</p>
-      <a href="#form" class="cta-button it-and-contact learn-more" data-key="cta-learn-more">Learn More</a>
+      <a href="#tiers" class="cta-button it-and-contact learn-more" data-key="cta-learn-more">Learn More</a>
     </header>
 
-    <section>
+    <section id="tiers">
       <h2 data-key="tiers-heading">Our IT Support Tiers</h2>
       <ul>
         <li data-key="tier-1">24/7 tech support & system monitoring</li>
@@ -59,19 +59,8 @@
       </figure>
     </section>
 
-    <section id="form" class="contact-form-section">
-      <h2 data-key="form-heading">Request Your Free IT Readiness Check</h2>
-      <form>
-        <input type="text" placeholder="" data-key="form-name" required />
-        <input type="email" placeholder="" data-key="form-email" required />
-        <input type="tel" placeholder="" data-key="form-phone" required />
-        <input type="text" placeholder="" data-key="form-company" required />
-        <div class="honeypot" aria-hidden="true">
-          <label for="hp-field">Leave this field blank</label>
-          <input type="text" id="hp-field" name="hp" tabindex="-1" autocomplete="off" />
-        </div>
-        <button type="submit" class="submit-button" data-key="form-submit">Request Now</button>
-      </form>
+    <section class="contact-cta">
+      <button type="button" class="cta-button contact-button" data-key="cta-contact">Contact Us</button>
     </section>
   </main>
   <footer class="ops-footer" data-key="footer-copyright" role="contentinfo">© 2025 OPS Online Support.</footer>
