--- a/professional-services.html
+++ b/professional-services.html
@@ -38,7 +38,7 @@
     <header>
       <h1 data-key="header-heading">Unlock Expertise. Deliver Results.</h1>
       <p data-key="header-subheading">Our consultants bring decades of experience to your biggest business challenges.</p>
-      <a href="#form" class="cta-button it-and-contact" data-key="cta-strategy-call">Book Free Strategy Call</a>
+      <a href="#offer" class="cta-button it-and-contact" data-key="cta-strategy-call">Book Free Strategy Call</a>
     </header>
 
     <section>
@@ -59,25 +59,14 @@
       <img src="https://placehold.co/600x100?text=Partner+Logos" alt="Partner logos" class="responsive-image" data-key="client-logos-alt" />
     </section>
 
-    <section class="offer-card">
+    <section id="offer" class="offer-card">
       <h2 data-key="offer-heading">Limited-Time Offer</h2>
       <p data-key="offer-text">Book by July 31 and get a free 90-minute ops strategy session (normally $650).</p>
       <p><span class="highlight-text" data-key="offer-count">Only 6 sessions left this month.</span></p>
     </section>
 
-    <section id="form" class="contact-form-section">
-      <h2 data-key="form-heading">Get Started Now</h2>
-      <form>
-        <input type="text" placeholder="" data-key="form-name" required />
-        <input type="email" placeholder="" data-key="form-email" required />
-        <input type="tel" placeholder="" data-key="form-phone" required />
-        <input type="text" placeholder="" data-key="form-company" required />
-        <div class="honeypot" aria-hidden="true">
-          <label for="hp-field">Leave this field blank</label>
-          <input type="text" id="hp-field" name="hp" tabindex="-1" autocomplete="off" />
-        </div>
-        <button type="submit" class="submit-button" data-key="form-submit">Book Session</button>
-      </form>
+    <section class="contact-cta">
+      <button type="button" class="cta-button contact-button" data-key="cta-contact">Contact Us</button>
     </section>
   </main>
   <footer class="ops-footer" data-key="footer-copyright" role="contentinfo">© 2025 OPS Online Support.</footer>
