--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <a class="learn-more" data-key="modal-learn-more"></a>
       </div>
     </section>
+    <section class="contact-cta">
+      <button type="button" class="cta-button contact-button" data-key="cta-contact">Contact Us</button>
     </section>
   </main>
   <footer class="ops-footer" data-key="footer-copyright" role="contentinfo">© 2025 OPS Online Support.</footer>
