--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -1,10 +1,5 @@
 <!-- Chatbot fragment loaded dynamically -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chat_bubble" />
-<button id="chat-open-btn" aria-label="Open chat">
-  <span class="material-symbols-outlined">
-    chat_bubble
-  </span>
-</button>
+<button id="chat-open-btn" aria-label="Open chat">CHAT</button>
 <div id="chatbot-container" role="dialog" aria-modal="true" aria-label="Chattia" style="display:none" aria-hidden="true">
   <div id="chatbot-header">
     <span id="title" data-en="Chattia" data-es="Chattia">Chattia</span>
