--- a/trap-doors.html
+++ b/trap-doors.html
@@ -278,9 +278,7 @@
 
 <!-- Source: fabs/chatbot.html -->
 <!-- Chatbot fragment loaded dynamically -->
-<button id="chat-open-btn" aria-label="Open chat">
-  <i class="fa-solid fa-comments"></i>
-</button>
+<button id="chat-open-btn" aria-label="Open chat">CHAT</button>
 <div id="chatbot-container" role="dialog" aria-modal="true" aria-label="Chattia" style="display:none" aria-hidden="true">
   <div id="chatbot-header">
     <span id="title" data-en="Chattia" data-es="Chattia">Chattia</span>
