--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -7,8 +7,8 @@
       <span id="langCtrl" class="ctrl" role="button" aria-label="Toggle language">EN</span>
       &nbsp;|&nbsp;
       <span id="themeCtrl" class="ctrl" role="button" aria-label="Toggle theme">Dark</span>
-      <button id="minimizeBtn" type="button" title="Minimize">
-        <i class="fa-solid fa-minus"></i>
+       &nbsp;|&nbsp;
+      <button id="minimizeBtn" type="button" title="Minimize"><i class="fa-solid fa-minus"></i>
       </button>
     </div>
   </div>
