--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -7,7 +7,7 @@
       <span id="langCtrl" class="ctrl" role="button" aria-label="Toggle language">EN</span>
       &nbsp;|&nbsp;
       <span id="themeCtrl" class="ctrl" role="button" aria-label="Toggle theme">Dark</span>
-      <input type="checkbox" id="hp_check" name="hp_check" tabindex="-1" />
+      <i class="fa-solid fa-xmark"></i>
       <button id="minimizeBtn" type="button" title="Minimize"><i class="fa-solid fa-minus"></i>
       </button>
     </div>
