Align minimize button with theme toggle

--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -6,9 +6,7 @@
     <div>
       <span id="langCtrl" class="ctrl" role="button" aria-label="Toggle language">EN</span>
       &nbsp;|&nbsp;
-      <span id="themeCtrl" class="ctrl" role="button" aria-label="Toggle theme">Dark</span>
-      <button id="minimizeBtn" type="button" title="Minimize"><i class="fa-solid fa-minus"></i>
-      </button>
+      <span id="themeCtrl" class="ctrl" role="button" aria-label="Toggle theme">Dark</span><button id="minimizeBtn" type="button" title="Minimize"><i class="fa-solid fa-minus"></i></button>
     </div>
   </div>
 
