--- a/fabs/chatbot.html
+++ b/fabs/chatbot.html
@@ -5,7 +5,7 @@
     <span id="title" data-en="Chattia" data-es="Chattia">Chattia</span>
     <div>
       <span id="langCtrl" class="ctrl" role="button" aria-label="Toggle language">EN</span>
-      &nbsp;|&nbsp;
+      &nbsp;|&nbsp;&nbsp;
       <span id="themeCtrl" class="ctrl" role="button" aria-label="Toggle theme">Dark</span><button id="minimizeBtn" type="button" title="Minimize"><i class="fa-solid fa-minus"></i></button>
     </div>
   </div>
