--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <script src="js/utils.js" defer></script>
     <script src="js/langtheme.js" defer></script>
     <script src="js/main.js" defer></script>
-    <script src="js/security-utils.js"></script>
+    <script src="js/antibot.js"></script>
     <script src="fabs/js/cojoin.js"></script>
     <script src="fabs/js/chattia.js"></script>
     <script src="cojoinlistener.js"></script>
