Fix language toggle text and attributes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="professional-services.html" class="nav-link" data-key="nav-professionals">Professionals</a>
     </div>
     <div class="toggles">
-      <button type="button" class="toggle-btn lang-toggle" aria-pressed="false" aria-label="" data-aria-label-key="aria-toggle-language">EN</button>
+      <button type="button" class="toggle-btn lang-toggle" aria-pressed="false" aria-label="" data-aria-label-key="aria-toggle-language">ES</button>
       <button type="button" class="toggle-btn theme-toggle" aria-pressed="false" aria-label="" data-aria-label-key="aria-toggle-theme">Dark</button>
       <button type="button" class="toggle-btn nav-menu-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="" data-aria-label-key="aria-nav-menu">
         <i class="fa-solid fa-bars" aria-hidden="true"></i>
