--- a/professional-services.html
+++ b/professional-services.html
@@ -23,7 +23,7 @@
       <a href="professional-services.html" class="nav-link active" data-key="nav-professionals">Professionals</a>
     </div>
     <div class="toggles">
-      <button type="button" class="toggle-btn lang-toggle" aria-label="Toggle language" aria-pressed="false">EN</button>
+      <button type="button" class="toggle-btn lang-toggle" aria-pressed="false" aria-label="" data-aria-label-key="aria-toggle-language">ES</button>
       <button type="button" class="toggle-btn theme-toggle" aria-label="Toggle theme" aria-pressed="false">Dark</button>
       <button type="button" class="toggle-btn nav-menu-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="" data-aria-label-key="aria-nav-menu">
         <i class="fa-solid fa-bars" aria-hidden="true"></i>
