--- a/it-support.html
+++ b/it-support.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://placehold.co; style-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css; font-src 'self' https://cdnjs.cloudflare.com; script-src 'self' 'sha256-4c8551ea60359723cbf8d33588ce9cfc11ba0841b8053ec6720bcea21a63a6eb' 'sha256-9af4270cfe68577b4026bac190e45957f471ba3e3bf6beda4dd353b10d0ccf65' 'sha256-3fa65aa46ad3e855cbc0c69536eb383d3f788f7561d271f7e535982acc173b9a' 'sha256-1712eb7f144fbb26d28e689e5f82933bbd3f876a41bf4551c1764e17ab0aea77' 'sha256-47b5eea8ed1cb5829fecdf8c01e8d2d63018b26330323255d5c5e8c396a14518'; connect-src 'self'; object-src 'none'; base-uri 'self';" />
-    <title data-key="title-it-support">IT Support | Ops Online Support</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="js/theme-init.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/utility.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="fabs/css/cojoin.css">
-  <link rel="stylesheet" href="fabs/css/chatbot.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.6/purify.min.js" integrity="sha384-JEyTNhjM6R1ElGoJns4U2Ln4ofPcqzSsynQkmEc/KGy6336qAZl70tDLufbkla+3" crossorigin="anonymous" defer></script>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://placehold.co; style-src 'self' https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css; font-src 'self' https://cdnjs.cloudflare.com; script-src 'self' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/ 'sha256-4c8551ea60359723cbf8d33588ce9cfc11ba0841b8053ec6720bcea21a63a6eb' 'sha256-9af4270cfe68577b4026bac190e45957f471ba3e3bf6beda4dd353b10d0ccf65' 'sha256-3fa65aa46ad3e855cbc0c69536eb383d3f788f7561d271f7e535982acc173b9a' 'sha256-1712eb7f144fbb26d28e689e5f82933bbd3f876a41bf4551c1764e17ab0aea77' 'sha256-47b5eea8ed1cb5829fecdf8c01e8d2d63018b26330323255d5c5e8c396a14518'; connect-src 'self' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/; frame-src 'self' https://www.google.com/recaptcha/; object-src 'none'; base-uri 'self';" />
+      <title data-key="title-it-support">IT Support | Ops Online Support</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="description" content="IT help desk, cybersecurity, and cloud services from OPS." />
+      <meta name="robots" content="index,follow" />
+      <meta name="recaptcha-site-key" content="YOUR_RECAPTCHA_SITE_KEY" />
+      <link rel="manifest" href="manifest.json" />
+      <script src="js/theme-init.js"></script>
+      <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/utility.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="fabs/css/cojoin.css">
+    <link rel="stylesheet" href="fabs/css/chatbot.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.6/purify.min.js" integrity="sha384-JEyTNhjM6R1ElGoJns4U2Ln4ofPcqzSsynQkmEc/KGy6336qAZl70tDLufbkla+3" crossorigin="anonymous" defer></script>
 </head>
 <body class="page-it-support">
   <nav class="ops-nav">
