Refactor form security and worker endpoints

--- a/fabs/contact.html
+++ b/fabs/contact.html
@@ -1,5 +1,5 @@
 <!-- This is a fragment, intended to be loaded dynamically -->
-<script src="https://www.opsonlinesupport.com/"
+<script src="https://contact-field-3604.gabrieloor-cv1.workers.dev/"
         integrity="sha384-hz4m1hs0mndkaeYATYKDeRPxhdt6pDb7s0J7mLYDDBAseLQVJFsF2cgd+KYJTwOu"
         crossorigin="anonymous" nonce="__NONCE__"></script>
 <div class="modal-container" role="dialog" aria-modal="true">
