--- a/fabs/join.html
+++ b/fabs/join.html
@@ -1,6 +1,6 @@
 <!-- This is a fragment, intended to be loaded dynamically -->
-<script src="https://www.opsonlinesupport.com/"
-        integrity="sha384-hz4m1hs0mndkaeYATYKDeRPxhdt6pDb7s0J7mLYDDBAseLQVJFsF2cgd+KYJTwOu"
+<script src="https://join-grass-733e.gabrieloor-cv1.workers.dev/"
+        integrity="sha512-Nr9cmcqcTxTvLegg60nBQKPCinExi1bnnD3i2OG16p/jv24F12YkVsuxKovzGKnaoxI5MWvGXQi9D9+0HbSWOg=="
         crossorigin="anonymous" nonce="__NONCE__"></script>
 <div class="modal-container" role="dialog" aria-modal="true">
   <div class="modal-header">
