--- a/security/honeypots.html
+++ b/security/honeypots.html
@@ -1,4 +1,4 @@
-<!-- Honeypot templates used by contact-field-3604.gabrieloor-cv1.workers.dev -->
+<!-- Honeypot templates used by Cloudflare workers -->
 <template id="form-honeypot">
   <div aria-hidden="true" hidden>
     <input type="text" id="hp_text" name="hp_text" tabindex="-1" autocomplete="off" />
