--- a/professional-services.html
+++ b/professional-services.html
@@ -33,11 +33,6 @@
 <body class="page-professional-services">
   <nav class="ops-nav">
     <a href="index.html" class="ops-logo" aria-label="OPS Home">OPS</a>
-    <div class="search-container">
-      <input type="search" id="search-input" placeholder="Search..." aria-label="Search">
-      <button id="search-button" aria-label="Search"><i class="fa fa-search"></i></button>
-      <button id="voice-search-button" aria-label="Voice Search"><i class="fa fa-microphone"></i></button>
-    </div>
     <div class="nav-links" id="primary-nav">
       <a href="index.html" class="nav-link" data-key="nav-business-ops">Business Operations</a>
       <a href="contact-center.html" class="nav-link" data-key="nav-contact-center">Contact Center</a>
@@ -92,7 +87,13 @@
     </section>
     <div id="search-results"></div>
   </main>
-  <footer class="ops-footer" data-key="footer-copyright" role="contentinfo">© 2025 OPS Online Support.</footer>
+  <footer class="ops-footer" data-key="footer-copyright" role="contentinfo">© 2025 OPS Online Support.
+    <div class="search-container">
+      <input type="search" id="search-input" placeholder="Search..." aria-label="Search">
+      <button id="search-button" aria-label="Search"><i class="fa fa-search"></i></button>
+      <button id="voice-search-button" aria-label="Voice Search"><i class="fa fa-microphone"></i></button>
+    </div>
+  </footer>
   <div id="modal-root"></div>
     <script src="js/langtheme.js" defer></script>
     <script src="js/main.js" defer></script>
